# linked-list-and-its-applications

./: CMakeLists.txt  Linked_list_Applications_test.cpp  Linked_lists_test.cpp  README.md  main.cpp
Stack/: ST_header_file.h  ST_source_code.cpp
Stack-problems/: infinx_to_postifix.cpp  longest_val_par.cpp
arrayBasedList/: ABL_CPP.cpp  ABL_H.h
circularLinkedList/: CCL_header_file.h  CCL_source_code.cpp
doubleLinkedList/: DLL.cpp  DLL.h
queue/: queue.cpp  queue.h
queue-problems/: Generate_Binary_Numbers.cpp  Implement_a_stack.cpp  sorting-a-queue.cpp
singleLinkedList/: SLL_header_file.h  SLL_source_code_file.cpp
singleLinkedList-problems/: Combine_nodes.cpp  merge_k_sorted_linkedlists.cpp
